tests/negative/import_no_exit_d.toit
// Copyright (C) 2019 Toitware ApS. All rights reserved.

ambiguous_cd := 499
